# ha-virtual-climate

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/: release-plan.json
.github/workflows/: hacs-validation.yml  hassfest.yml  python-ci.yml  release-alpha-prerelease.yml  release-beta-prerelease.yml
custom_components/virtual_climate/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  manifest.json  models.py  sensor.py  services.yaml
custom_components/virtual_climate/translations/: en.json
docs/: release-policy.md
tests/: conftest.py  test_climate.py  test_config_flow.py  test_runtime.py
